syntax = "proto3";
package DomainServices.SalesArrangementService.v1;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts.v1";

import "google/protobuf/empty.proto";
import "CreateSalesArrangement.proto";
import "SalesArrangement.proto";
import "GetSalesArrangement.proto";
import "LinkModelationToSalesArrangement.proto";
import "UpdateSalesArrangementState.proto";
import "GetSalesArrangementList.proto";
import "GetSalesArrangementByOfferId.proto";
import "UpdateSalesArrangement.proto";
import "SendToCmp.proto";

service SalesArrangementService {
	// zalozeni noveho SA
	rpc CreateSalesArrangement (DomainServices.SalesArrangementService.CreateSalesArrangementRequest) returns (DomainServices.SalesArrangementService.CreateSalesArrangementResponse);
   
	// zakladni informace o SA
	rpc GetSalesArrangement (DomainServices.SalesArrangementService.GetSalesArrangementRequest) returns (DomainServices.SalesArrangementService.SalesArrangement);
	
	// vrait SA pro danou modelaci
    rpc GetSalesArrangementByOfferId (DomainServices.SalesArrangementService.GetSalesArrangementByOfferIdRequest) returns (DomainServices.SalesArrangementService.GetSalesArrangementByOfferIdResponse);

	// update stavu SA
	rpc UpdateSalesArrangementState (DomainServices.SalesArrangementService.UpdateSalesArrangementStateRequest) returns (google.protobuf.Empty);

	// nalinkovani nove modelace na existujici SA
	rpc LinkModelationToSalesArrangement (LinkModelationToSalesArrangementRequest) returns (google.protobuf.Empty);

	// vraci vsechny SA pro dane CaseId
	rpc GetSalesArrangementList (DomainServices.SalesArrangementService.GetSalesArrangementListRequest) returns (DomainServices.SalesArrangementService.GetSalesArrangementListResponse);
   
    // updatuje SA - cislo smlouvy
	rpc UpdateSalesArrangement (DomainServices.SalesArrangementService.UpdateSalesArrangementRequest) returns (google.protobuf.Empty);

	// predani ke zpracovani
	rpc SendToCmp (DomainServices.SalesArrangementService.SendToCmpRequest) returns (google.protobuf.Empty);
}